<?xml version="1.0"?>
<package format="2">
  <name>amr_gazebo</name>
  <version>0.0.0</version>
  <description>The amr_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="phuc@todo.todo">phuc</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <build_depend>roslaunch</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- <build_depend>controller_manager</build_depend>
  <build_depend>fake_localization</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>amr_description</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>rqt_robot_steering</build_depend>
  <build_depend>topic_tools</build_depend>

  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>fake_localization</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>amr_description</build_export_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>rostopic</build_export_depend>
  <build_export_depend>rqt_robot_steering</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend> -->

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>fake_localization</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>amr_description</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>topic_tools</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
