<?xml version="1.0"?>
<package format="2">
  <name>amr_navigation</name>
  <version>0.0.0</version>
  <description>The amr_navigation package</description>
  <maintainer email="phuc@todo.todo">phuc</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>amcl</exec_depend>
  <!-- <exec_depend>base_local_planner</exec_depend> -->
  <!-- <exec_depend>dwa_local_planner</exec_depend> -->
  <exec_depend>dwb_critics</exec_depend>         <!-- for dwb_local_planner -->
  <exec_depend>dwb_local_planner</exec_depend>   <!-- for dwb_local_planner -->
  <exec_depend>dwb_plugins</exec_depend>         <!-- for dwb_local_planner -->
  <!-- <exec_depend>eband_local_planner</exec_depend> -->
  <!-- <exec_depend>hector_mapping</exec_depend> -->
  <exec_depend>map_server</exec_depend>
  <exec_depend>amr_driver</exec_depend>
  <exec_depend>mir_dwb_critics</exec_depend>     <!--for dwb_local_planner-->
  <!-- <exec_depend>mir_gazebo</exec_depend> -->
  <exec_depend>move_base</exec_depend>
  <exec_depend>nav_core_adapter</exec_depend>    <!-- for dwb_local_planner -->
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>sbpl_lattice_planner</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>spatio_temporal_voxel_layer</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
